--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "message-service",
+  "name": "discord-rest-router",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
@@ -12,7 +12,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@synzen/discord-rest": "0.0.4",
+    "@synzen/discord-rest": "0.0.5",
     "express": "^4.17.1",
     "express-winston": "^4.0.5",
     "request-ip": "^2.1.3",
