--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "discord-rest-router",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "build/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build && node build/app.js",
     "build": "tsc",
     "dev": "nodemon"
   },
-  "author": "",
+  "author": "synzen",
   "license": "MIT",
   "dependencies": {
     "@synzen/discord-rest": "0.0.5",
