--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build && node build/app.js",
     "build": "tsc",
+    "lint": "eslint src",
     "dev": "nodemon"
   },
   "author": "synzen",
@@ -23,6 +24,9 @@
     "@types/express": "^4.17.7",
     "@types/node-fetch": "^2.5.7",
     "@types/request-ip": "0.0.35",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
+    "eslint": "^7.7.0",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
