--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "author": "synzen",
   "license": "MIT",
   "dependencies": {
-    "@synzen/discord-rest": "0.0.6",
+    "@synzen/discord-rest": "0.0.7",
     "express": "^4.17.1",
     "express-winston": "^4.0.5",
     "request-ip": "^2.1.3",
+    "response-time": "^2.3.2",
     "winston": "^3.3.3",
     "zod": "^1.10.4"
   },
